<resources>
  <string name="app_name">CredStackView</string>
  <!-- Credit Amount Screen -->
  <string name="credit_amount_question">%s, how much do you need?</string>
  <string name="credit_amount_message">move the dial and set any amount you need up to %s</string>
  <string name="credit_amount_expand_icon">expand credit amount selection step</string>
  <string name="credit_amount_proceed">Proceed to EMI selection</string>
  <string name="credit_amount_selected">credit amount</string>
  <string name="credit_amount_seekbar_message">stash is instant. money will be credited within seconds.</string>
  <!-- Plans View -->
  <string name="plans_view_question">how do you wish to repay?</string>
  <string name="plans_view_message">choose one of our recommended plans or make your own</string>
  <string name="plans_view_expand_icon">expand plan selection step</string>
  <string name="plans_view_create_plan">Create your own plan</string>
  <string name="plans_view_proceed">Select your bank account</string>
  <string name="plans_price_per_month">%d / mo</string>
  <string name="plans_price_for_month">for %d months</string>
  <!-- Transaction Screen -->
  <string name="transaction_detail_question">where should we send the money?</string>
  <string name="transaction_detail_message">amount will be credited to this bank account, EMI will also be debited from this bank account</string>
  <string name="transaction_detail_change_account">Change account</string>
  <string name="transaction_detail_detail_proceed">Tap for 1-click KYC</string>
  <string name="plans_item_calculation">See calculations</string>
  <string name="plan_recommended">recommended</string>
</resources>
